* Curve: Lower Navigation Bar Alignment with Small Screen Resolution (index.css) [Bug 3400]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8300 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/index.css
+++ b/Themes/curve/css/index.css
@@ -126,6 +126,7 @@ div#upper_section div.news form
 	overflow: hidden;
 	margin: 0;
 	padding: 0.5em;
+	margin: 1em 0 0 0;
 }
 #navigate_section_upper ul, #navigate_section_lower ul
 {
